[pom] Add jvmargs for tomee